upgrade to micronaut 2.4